--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,8 +3,8 @@
 </div>
 
 <div class="topnav">
-  <a href="#">Home</a>
-  <a href="#">News</a>
-  <a href="#">About</a>
-  <a href="#" style="float:right">Contact</a>
+  <%= link_to "Home", '#' %>
+  <%= link_to "News", '#' %>
+  <%= link_to "About", '#' %>
+  <span style="float:right"><%= link_to "Contact", '#' %></span>
 </div>
