--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -97,3 +97,12 @@ body {
         width:100%;
     }
 }
+
+.body-link a {
+    color: black;
+    text-decoration: none;
+}
+
+.body-link a:hover {
+    text-decoration: underline;
+}
