Add working links without testing

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,8 +3,8 @@
 </div>
 
 <div class="topnav">
-  <%= link_to "Home", '#' %>
-  <%= link_to "News", '#' %>
-  <%= link_to "About", '#' %>
-  <span style="float:right"><%= link_to "Contact", '#' %></span>
+  <%= link_to "Home", root_path %>
+  <%= link_to "News", news_path %>
+  <%= link_to "About", about_path %>
+  <span style="float:right"><%= link_to "Contact", contact_path %></span>
 </div>
