--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -19,7 +19,7 @@
   <div class="rightcolumn">
     <div class="card">
       <h2>
-        <span class="body-link"><%= link_to "About Me", '#' %></span>
+        <span class="body-link"><%= link_to "About Me", about_path %></span>
       </h2>
       <div class="fakeimg" style="height:100px;">Image</div>
       <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
