--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,8 +3,9 @@
 </div>
 
 <div class="topnav">
-  <%= link_to "Home", root_path %>
-  <%= link_to "News", news_path %>
-  <%= link_to "About", about_path %>
-  <span style="float:right"><%= link_to "Contact", contact_path %></span>
+  <%= link_to "Home",     root_path %>
+  <%= link_to "About",    about_path %>
+  <%= link_to "Pictures", pictures_path %>
+  <%= link_to "Videos",   videos_path %>
+  <span style="float:right"><%= link_to "Subscribe", subscribe_path %></span>
 </div>
