--- a/app/views/static_pages/videos.html.erb
+++ b/app/views/static_pages/videos.html.erb
@@ -1,3 +1,3 @@
 <% provide(:title, "Videos") %>
-<h1>StaticPages#videos</h1>
-<p>Find me in app/views/static_pages/videos.html.erb</p>
+<h1>Videos</h1>
+<p>Here you might see a list of videos. This could probably be combined with the pictures tab.</p>
