Revert "Modify page content"
This reverts commit babec999565dd1b7bdaee1d0d6b24f808aaa4985.

--- a/app/views/static_pages/pictures.html.erb
+++ b/app/views/static_pages/pictures.html.erb
@@ -1,3 +1,3 @@
 <% provide(:title, "Pictures") %>
-<h1>Pictures</h1>
-<p>Here you might see a list of pictures.</p>
+<h1>StaticPages#pictures</h1>
+<p>Find me in app/views/static_pages/pictures.html.erb</p>
