--- a/app/views/static_pages/subscribe.html.erb
+++ b/app/views/static_pages/subscribe.html.erb
@@ -1,3 +1,3 @@
 <% provide(:title, "Subscribe") %>
-<h1>Subscribe</h1>
-<p>This is where a reader could subscribe to the blog with their email address.</p>
+<h1>StaticPages#subscribe</h1>
+<p>Find me in app/views/static_pages/subscribe.html.erb</p>
