--- a/app/views/followers/subscribe.html.erb
+++ b/app/views/followers/subscribe.html.erb
@@ -1,3 +1,17 @@
 <% provide(:title, "Subscribe") %>
-<h1>Followers#subscribe</h1>
-<p>Find me in app/views/followers/subscribe.html.erb</p>
+
+<form action='#'>
+  <div class="container">
+    <h1>Subscribe</h1>
+    <p>Please fill in this form to subscribe.</p>
+    <hr>
+    <label for="name"><b>Name</b></label>
+    <input type="text" placeholder="Enter Name" name="name" required>
+    <label for="email"><b>Email</b></label>
+    <input type="email" placeholder="Enter Email" name="email" required>
+    <div class="clearfix">
+      <button type="button" class="cancelbtn">Cancel</button>
+      <button type="button" class="signupbtn">Subscribe</button>
+    </div>
+  </div>
+</form>
