--- a/app/views/followers/subscribe.html.erb
+++ b/app/views/followers/subscribe.html.erb
@@ -5,8 +5,10 @@
 
 <div class="container">
   <%= form_for(@follower) do |f| %>
-    <%= f.label      :name %>
-    <%= f.text_field :name %>
+    <%= render 'shared/error_messages' %>
+    
+    <%= f.label       :name %>
+    <%= f.text_field  :name %>
     
     <%= f.label       :email %>
     <%= f.email_field :email %>
