Display posts on home page

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,7 +1,9 @@
-<div class="card">
-  <h2>TITLE HEADING</h2>
-  <h5>Title description, Sep 2, 2017</h5>
-  <p>Some text..</p>
-  <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur 
-     adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-</div>
+<% @posts.each do |post| %>
+  <div class="card">
+    <h2>TITLE HEADING</h2>
+    <h5>Posted <%= post.created_at %></h5>
+    <p>Some text..</p>
+    <p><%= post.content %></p>
+    <br>
+  </div>
+<% end %>
