Modify time format on posts

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,7 @@
 <% provide(:title, "Home") %>
 <div class="row">
   <div class="leftcolumn">
+    <h1>Posts</h1>
     <%= render 'posts/post' %>
   </div>
 </div>
