--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,6 @@
 <% @posts.each do |post| %>
   <div class="card">
-    <h5>Posted on <%= post.created_at.in_time_zone("Central Time (US & Canada)").strftime("%b %d,  %Y at %l:%M %p") %></h5>
+    <h5>Posted on <%= correct_date_format(post.created_at) %></h5>
     <p><%= post.content %></p>
   </div>
 <% end %>
