--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,6 @@
 <% @posts.each do |post| %>
   <div class="card">
+    <h2><%= post.title %></h2>
     <h5>Posted on <%= correct_date_format(post.created_at) %></h5>
     <p><%= post.content %></p>
   </div>
