--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,6 +2,7 @@
 <div class="row">
   <div class="leftcolumn">
     <h1>Posts</h1>
+    <%= link_to "Create Post", new_post_path %>
     <%= render 'posts/post' %>
   </div>
 </div>
