--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,7 +4,7 @@
 
 <div class="container">
   <%= form_for(@post) do |f| %>
-    
+    <%= render 'shared/error_messages', object: f.object %>
     <%= f.label       :title %><br>
     <%= f.text_field  :title %><br>
  
