--- a/app/views/followers/subscribe.html.erb
+++ b/app/views/followers/subscribe.html.erb
@@ -5,7 +5,7 @@
 
 <div class="container">
   <%= form_for(@follower) do |f| %>
-    <%= render 'shared/error_messages' %>
+    <%= render 'shared/error_messages', object: f.object %>
     
     <%= f.label       :name %>
     <%= f.text_field  :name %>
