--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,5 +8,4 @@
   <%= link_to "Pictures", pictures_path %>
   <%= link_to "Videos",   videos_path %>
   <span style="float:right"><%= link_to "Subscribe", subscribe_path %></span>
-</div>
-
+</div>sldkf
