--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -4,5 +4,6 @@
     <h5>Posted on <%= correct_date_format(post.created_at) %></h5>
     <p><%= post.content %></p>
     <%= link_to "delete", post, method: :delete, data: { confirm: "You sure?" } %>
+    <%= link_to "edit", edit_post_path(post)  %>
   </div>
 <% end %>
