--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,9 +2,8 @@
 <div class="row">
   <div class="leftcolumn">
     <h1>Posts</h1>
-    <%= link_to "Create Post", new_post_path %>
-    <button id="testButton" onclick="testButton()">Test button</button>
-    <div id="container"></div>
+    <button id="newPost" onclick="newPost()">New Post</button>
+    <div id="newComment"></div>
     <%= render 'posts/post' %>
   </div>
 </div>
